# first-django

./: .gitignore  README.md  pyproject.toml
mysite/: settings.py
polls/: admin.py  models.py  urls.py  views.py
polls/domain/: choice.py  question.py
polls/migrations/: 0001_initial.py
