[tool.poetry]
name = "first-django"
version = "1.0.0"
description = ""
authors = ["ajsobrino <antonio.sobrino@feedzai.com>"]
readme = "README.md"
packages = [{include = "first_django"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
